--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -836,7 +836,7 @@
     "Our History Title": "عنوان تاريخنا",
     "Type our history title": "اكتب العنوان هنا",
     "Our History Subtitle": "العنوان الفرعي لتاريحنا",
-    "Type our history subtitle": "اكتب العنوان الفرعي هنا"
+    "Type our history subtitle": "اكتب العنوان الفرعي هنا",
     "Type year": "اكتب السنة",
     "Type subtitle": "اكتب العنوان الفرعي",
     "Subtitle": "العنوان الفرعي",
